Fixes the search step of the inference and cohere notebooks.

--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -154,6 +154,7 @@
    "id": "840d92f0",
    "metadata": {},
    "source": [
+    "<a name=\"create-the-inference-endpoint\"></a>\n",
     "## Create the inference endpoint\n",
     "\n",
     "Let's create the inference endpoint by using the [Create inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html).\n",
@@ -356,7 +357,7 @@
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
-    "                \"inference_id\": \"my_openai_embedding_model\",\n",
+    "                \"model_id\": \"my_openai_embedding_model\",\n",
     "                \"model_text\": \"Fighting movie\",\n",
     "            }\n",
     "        },\n",
@@ -378,14 +379,8 @@
    "id": "7e4055ba",
    "metadata": {},
    "source": [
-    "**NOTE:** If you use Elasticsearch 8.12, you must change `inference_id` in the snippet above to `model_id`."
+    "**NOTE:** The value of `model_id` in the `query_vector_builder` must match the value of `inference_id` you created in the [first step](#create-the-inference-endpoint)."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59220b82",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
