--- a/notebooks/integrations/cohere/inference-cohere.ipynb
+++ b/notebooks/integrations/cohere/inference-cohere.ipynb
@@ -184,6 +184,7 @@
     "id": "96788aa1"
    },
    "source": [
+    "<a name=\"create-the-inference-endpoint\"></a>\n",
     "## Create the inference endpoint\n",
     "\n",
     "Let's create the inference endpoint by using the [Create inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html).\n",
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a47cdc60",
    "metadata": {
     "colab": {
@@ -406,7 +407,7 @@
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
-    "                \"inference_id\": \"cohere_embeddings\",\n",
+    "                \"model_id\": \"cohere_embeddings\",\n",
     "                \"model_text\": \"Fighting movie\",\n",
     "            }\n",
     "        },\n",
@@ -421,6 +422,14 @@
     "    title = hit[\"_source\"][\"title\"]\n",
     "    plot = hit[\"_source\"][\"plot\"]\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a38763",
+   "metadata": {},
+   "source": [
+    "**NOTE:** The value of `model_id` in the `query_vector_builder` must match the value of `inference_id` you created in the [first step](#create-the-inference-endpoint)."
    ]
   }
  ],
